<resources>
    <string name="app_name">Bongstagram</string>
    <string name="contentFrame">Instagram</string>

    <!-- Title -->
    <string name="title_splash">Splash</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_activity">활동</string>
    <string name="title_profile">Profile</string>
    <string name="title_local">새 게시물</string>
    <string name="title_google">구글맵</string>
    <string name="title_popular">인기</string>
    <string name="title_recent">최근 게시물</string>
    <string name="title_toolbar_title">제목</string>
    <string name="title_see">자세히 보기</string>
    <string name="title_newActivity">새로운 활동</string>
    <string name="title_yesterday">어제</string>
    <string name="title_today">오늘</string>
    <string name="title_week">이번 주</string>
    <string name="title_name">유저 이름</string>
    <string name="title_before_activity">이전 활동</string>
    <string name="title_search_desc">Search...</string>
    <string name="title_masterName">2_bong</string>
    <string name="title_image_shared">님이 사진을 공유했습니다.</string>
    <string name="title_reply_layout">댓글</string>
    <string name="title_reply">답글 달기</string>
    <string name="title_reply_hint">댓글 달기…</string>
    <string name="title_reply_activity">게시</string>
    <string name="title_reply_like">좋아요</string>
    <string name="title_reply_hide">답글 숨기기</string>
    <string name="title_reply_show">이전 답글 보기</string>
    <string name="title_reply_selected"> 선택됨</string>
    <string name="title_profile_correction">프로필 수정</string>
    <string name="title_profile_promotion">홍보</string>
    <string name="title_profile_insite">인사이트</string>
    <string name="title_profile_post">게시물</string>
    <string name="title_profile_follower">팔로워</string>
    <string name="title_profile_following">팔로잉</string>
    <string name="title_profile_modify">프로필 수정</string>
    <string name="title_profile_ImageChange">프로필 사진 변경</string>
    <string name="title_profile_modify_Name">Name</string>
    <string name="title_profile_modify_Username">Username</string>
    <string name="title_profile_modify_Website">Website</string>
    <string name="title_profile_modify_Bio">Bio</string>
    <string name="title_local_detail">클릭</string>
    <!-- Icon -->
    <string name="icon_camera">Camera</string>
    <string name="icon_air">Air</string>
    <string name="icon_comment">Comment</string>
    <string name="icon_allOut">AllOut</string>
    <string name="icon_head">HeadLine</string>

    <!-- Facebook-->
    <string name="facebook_app_id">2442465452730583</string>
    <!-- Ted Permission -->
    <string name="permission">설정</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <!-- Key-->
    <string name="preference_file_key">com.bong.bongstagram.PREFERENCE_FILE_KEY</string>
</resources>
