<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/reply_Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/grey_50"
            android:elevation="100dp"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="119dp">

            <ImageView
                android:id="@+id/profile_Close"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_close_24" />

            <TextView
                android:id="@+id/reply_Toolbar_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/title_profile_modify"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/profile_Complete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_done_24" />
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- **** Place Your Content Here **** -->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:paddingBottom="3dp"
                android:background="@drawable/toolbar_dropshadow" />
        </FrameLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout16"
                tools:layout_editor_absoluteX="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/profile_image"
                    android:background="@drawable/circlebackground"
                    android:src="@mipmap/test"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/permission"
                        android:textColor="@color/light_blue_600"
                        android:textSize="17sp"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/profile_ImageChange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/title_profile_ImageChange"
                        android:textColor="@color/light_blue_600"
                        android:textSize="17sp" />
                </FrameLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_profile_modify_Name"
                    android:textColor="@color/grey_400"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/profile_modify_Name"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="25"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_profile_modify_Username"
                    android:textColor="@color/grey_400"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/profile_modify_UserName"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="25"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_profile_modify_Website"
                    android:textColor="@color/grey_400"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/profile_modify_Website"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:inputType="textWebEditText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_profile_modify_Bio"
                    android:textColor="@color/grey_400"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/profile_modify_Bio"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="150" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_5"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>