<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reply_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_500"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/reply_Close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_close_24" />

        <TextView
            android:id="@+id/reply_Toolbar_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:textColor="@color/indigo_50"
            android:textSize="20sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/reply_Trash"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_delete_outline_24" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reply_Toolbar">

        <!--        <LinearLayout-->
        <!--            android:id="@+id/linearLayout11"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content">-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/reply_Url"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/circlebackground"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/test" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reply_Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/title_name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reply_Content"
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_masterName" />

                    <TextView
                        android:id="@+id/reply_Date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/title_see"
                        android:textColor="@color/grey_text1"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reply_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="110dp" />
        </LinearLayout>
        <!--        </LinearLayout>-->
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/reply_EditText_Layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_200"
            app:layout_constraintBottom_toTopOf="@+id/layout10" />

        <LinearLayout
            android:id="@+id/layout10"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/overlay_light_90"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/reply_Image"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/test"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/reply_EditText"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:background="@color/overlay_light_90"
                android:backgroundTint="@color/overlay_light_90"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/title_reply_hint"
                android:imeOptions="actionSend"
                android:paddingStart="5dp" />

            <Button
                android:id="@+id/reply_Btn"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center_vertical|center"
                android:backgroundTint="@color/colorDefault"
                android:stateListAnimator="@null"
                android:text="@string/title_reply_activity"
                android:textColor="@color/light_blue_200" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>