<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/replyLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/reply_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/item_change_background"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            tools:ignore="RtlSymmetry">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/reply_user_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circlebackground"
                android:scaleType="centerCrop"
                android:src="@mipmap/test" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reply_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/title_masterName"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reply_short_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="@string/title_name"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <TextView
                    android:id="@+id/reply_long_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/reply_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="date"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/grey_400" />

                    <TextView
                        android:id="@+id/reply_like_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/grey_400"
                        android:visibility="gone"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reply_To"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/title_reply"
                        android:textColor="@color/grey_400"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical|end"
            android:backgroundTint="@color/colorDefault"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/change_favorite" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/replyShowHide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        android:visibility="gone"
        tools:ignore="RtlSymmetry">

        <View
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_marginStart="55dp"
            android:layout_gravity="center_vertical"
            android:background="@color/grey_400" />

        <TextView
            android:id="@+id/reReply_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/title_reply_hide"
            android:textColor="@color/grey_400" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>